--- a/src/main/java/org/pilirion/nakaza/components/page/css/nakaza.css
+++ b/src/main/java/org/pilirion/nakaza/components/page/css/nakaza.css
@@ -10,7 +10,7 @@ body {
 h1 {
     margin: 5px 0px 6px;
     color: #76653b;
-    font-size: 20px;
+    font-size: 36px;
     line-height: 44px;
     font-weight: 700;
 }
@@ -592,4 +592,18 @@ a, a:active, a:hover, a:visited {
 
 .administer .story {
     margin-top: 20px;
+}
+
+.sign-in {
+    visibility: hidden;
+}
+
+.float-left {
+    float: left;
+    margin-right: 10px;
+}
+
+.float-right {
+    float: right;
+    margin-left: 10px;
 }
