--- a/src/main/java/org/pilirion/nakaza/components/page/statics/AboutWorld.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/statics/AboutWorld.html
@@ -8,34 +8,36 @@
 
             <p>Ještě nedávno si všichni mysleli, že budoucnost lidstva nemůže být růžovější – závislost na fosilních
                 palivech prakticky zmizela, lidský život se prodlužoval a prakticky všechny nemoci ustupovaly před
-                novými léky. Zejména před léky farmaceutické korporace Odagra. Nic ale nemohlo být vzdálenější od
-                pravdy …
+                novými léky. Zejména před léky farmaceutické korporace Odagra. Nic ale nemohlo být vzdálenější od pravdy
+                …
             </p>
 
-            <p>Nikdo přesně neví, co se stalo, ale jedno je jisté – Odagra vážně překročila svoje kompetence v honbě o
-                prvenství ve výzkumu léku proti rakovině. Před třemi měsíci se jí jeden laboratorní experiment na
-                dobrovolnících vymkl z ruky a testovací subjekty po injekci zkušebního séra uprchly z laboratoře
-                neznámo kam. To sérum bylo ovšem neskutečně nebezpečné a způsobovalo genetickou mutaci nebývalých
-                rozměrů. Nakažení, neboť jinak se jim opravdu říci nedá, byli agresivní a rychle nákazu šířili mezi
-                ostatní populací.
+            <p>Nikdo přesně neví, co se stalo, ale jedno je jisté – Odagra vážně překročila svoje kompetence v honbě za
+                prvenstvím ve výzkumu léku proti rakovině. Před třemi měsíci se jí jeden laboratorní experiment na
+                dobrovolnících vymkl z ruky a testovací subjekty po injekci zkušebního séra uprchly z laboratoře neznámo
+                kam. To sérum bylo ovšem neskutečně nebezpečné a způsobovalo genetickou mutaci nebývalých rozměrů.
+                Nakažení, neboť jinak se jim opravdu říci nedá, byli agresivní a rychle nákazu šířili mezi ostatní
+                populací.
             </p>
 
-            <p>Dnes, tři měsíce a dva dny po útěku z laboratoře, je okolí Elefantry zaplaveno infikovanými tvory,
-                kterým z lidskosti nezbylo vůbec nic. Město se uzavřelo ocelovými zdmi a vyhlásilo karanténu. Celá
-                spádová oblast města byla izolována od zbytku státu a na tomto území bylo vyhlášeno stanné právo.
-                Lidé nevycházejí ze svých domovů a městská infrastruktura pomalu kolabuje. Vojenské síly likvidují
-                každého jedince, který projeví byť i nepatrnou známku zásahu virem.
+            <p>Dnes, tři měsíce a dva dny po útěku z laboratoře, je okolí Elefantry zaplaveno infikovanými tvory, kterým
+                z lidskosti nezbylo vůbec nic. Město se uzavřelo ocelovými zdmi a vyhlásilo karanténu. Celá spádová
+                oblast města byla izolována od zbytku státu a na tomto území bylo vyhlášeno stanné právo. Lidé
+                nevycházejí ze svých domovů a městská infrastruktura pomalu kolabuje. Vojenské síly likvidují každého
+                jedince, který projeví byť i nepatrnou známku zásahu virem.
             </p>
 
             <p>
-                Přeživší v zasažené oblasti nemají na výběr a skrývají se. Den za dnem přežívají v neustálém strachu z
-                nakažených i z vojáků a paběrkují na tom, co zbylo z lidské společnosti, ve snaze najít si bezpečný
-                úkryt...
+                Přeživší v zasažené oblasti mimo zdi města nemají na výběr a skrývají se. Den za dnem přežívají v
+                neustálém strachu z nakažených i z vojáků a paběrkují na tom, co zbylo z lidské společnosti, ve snaze
+                najít si bezpečný úkryt...
             </p>
 
-            <h2>Skupiny</h2>
+            <h2>Veřejný popis skupin</h2>
 
             <h3>Přeživší</h3>
+
+            <img class="float-left" wicket:id="survivor" />
 
             <p>Po začátku šíření nákazy rozhodla korporace Odagra o zřízení karanténních oblastí. Nenakaženým obyvatelům
                 bylo nakázáno, aby si vytvořili zásoby a neopouštěli bezpečí svých domovů. Většina předpokládala, že se
@@ -44,13 +46,16 @@
             </p>
 
             <p>
-                Popis skupiny: Ve skupině jsou nejčastěji malé skupinky či dokonce jednotlivci obyvatel, jimž se daří
-                úspěšně skrývat a vyhýbat se nakaženým. Bohužel zásob stále ubývá a všichni postupně museli opustit
-                bezpečí svých úkrytů. V této skupině narazíte jak na obyčejné, tak i na velice vzdělané lidi. Jejich
-                zbraně nejčastěji tvoří různé improvizované zbraně, nářadí, nože a výjimečně i pistole.
+                Popis skupiny: Ve skupině jsou nejčastěji malé skupinky či dokonce jednotlivci, jimž se prozatím daří
+                úspěšně skrývat před vojáky a vyhýbat se nakaženým. Bohužel zásob stále ubývá a všichni postupně museli
+                opustit bezpečí svých úkrytů. V této skupině narazíte jak na obyčejné, tak i na velice vzdělané lidi
+                nejrůznějšího typu. Jejich zbraně nejčastěji tvoří různé improvizované zbraně, nářadí, nože a výjimečně
+                i pistole.
             </p>
 
             <h3>Zombie</h3>
+
+            <img class="float-right" wicket:id="zombie" />
 
             <p>
                 Následuje vyjádření doktora Entona pro rozpoznání průběhu nákazy u postižených osob.
@@ -63,36 +68,40 @@
             </p>
 
             <p>
-                Dr. Enton bohužel přehlédl jednu velice zajímavou vlastnost u nakažených osob přeživšími nazývanými
-                prostě „zombie“. Lidské tělo se po několika měsících dokáže nákazu do jisté míry potlačit a obnovit
-                některé mozkové funkce. Nejvíce to lze připodobnit k chování smečky zvířat schopných vytvářet jednoduché
-                pasti či dokonce možná i zbraně.
+                Dr. Enton bohužel přehlédl jednu velice zajímavou vlastnost u nakažených osob, které jsou přeživšími
+                nazývány prostě „zombie“, popř. „nemrtví a často také „ti hnusní šmejdi“. Lidské tělo po několika
+                měsících dokáže nákazu do jisté míry potlačit a obnovit některé mozkové funkce. Nejvíce to lze
+                připodobnit k chování smečky zvířat, v níž panuje určitá hierarchie a jistá základní spoluprace ve snaze
+                přežít (metaforicky řečeno).
             </p>
 
             <p>
                 Popis skupiny: Nakažení nebo též tzv. „zombie“ se vyznačují světlejší barvou kůže s lehce nazelenalým
                 nádechem. Po delší době působení nákazy dokáží opět trochu přemýšlet a i spolupracovat při honu za
                 kořistí. Nejčastěji na zabití své kořisti používají ostré drápy, nebo zuby a výjimečně i jednoduché
-                pazourkové zbraně či vše nebezpečné co naleznou při svém zkoumání. Nakažený zatím naštěstí stále neumí
+                pazourkové zbraně či vše nebezpečné co naleznou při svém zkoumání. Nakažení zatím naštěstí stále neumí
                 ovládat střelné zbraně.
             </p>
 
+            <img class="float-left" wicket:id="army" />
+
             <h3>Armáda</h3>
 
+
             <p>
-                Unik testovaných subjektů byl pro korporaci Odagra velký problém, který se rozhodla vyřešit co
-                nejrychleji i za použití síly. Kvůli tomuto účelu vyslala většinu své korporátní armády do karanténních
-                oblastí pro zajištění bezpečnosti přeživších. Soukromou armádu tvoří téměř výhradně bývalí vojáci a
-                výjimečně i bývalí policisté, kteří jsou ochotní pro pěknou finanční sumu uklidit jakoukoli špínu. Jsou
-                to tvrdí a zkušení muži i ženy, jejichž hlavní zábavou je zabíjení a zbraně.
+                Unik testovaných subjektů představoval pro korporaci Odagra obrovský problém, který se rozhodla vyřešit
+                co nejrychleji s použitím smrtící síly. Kvůli tomuto účelu vyslala většinu své korporátní armády do
+                karanténních oblastí pro zajištění bezpečnosti přeživších. Soukromou armádu tvoří téměř výhradně bývalí
+                vojáci a výjimečně i bývalí policisté, kteří jsou ochotní pro pěknou finanční sumu uklidit jakoukoli
+                špínu. Jsou to tvrdí a zkušení muži i ženy, jejichž hlavní zábavou je zabíjení a zbraně.
             </p>
 
             <p>
-                Popis skupiny: Armáda je nejmenší skupinou ve hře jejíž hlavní výhodou proti všem ostatním je celkem
-                dostatečné množství munice a střelných zbraní. Nejčastěji musí hlídkovat ve vyhrazené karanténní oblasti
-                a likvidovat každého nakaženého, kterého potkají, ale občas musí provádět i jiné méně zajímavé úkony,
-                jako bezpečné dopravení zásob munice či výslechy zatčených. Jejich zbraně nejčastěji tvoří výhradně
-                střelné zbraně občas doplněné o nějaký nůž či mačetu.
+                Popis skupiny: Armáda je nejmenší skupinou ve hře, jejíž hlavní výhodou proti všem ostatním je celkem
+                relativně dostatečné množství munice, a střelných zbraní a vybavení. Nejčastěji musí hlídkovat ve
+                vyhrazené karanténní oblasti a likvidovat každého nakaženého, kterého potkají, ale občas musí provádět i
+                jiné méně zajímavé úkony, jako bezpečné dopravení zásob munice či výslechy zatčených. Jejich zbraně
+                nejčastěji tvoří výhradně střelné zbraně občas doplněné o nějaký nůž či mačetu.
             </p>
         </div>
     </div>
