Finished preparations for registration

--- a/src/main/java/org/pilirion/nakaza/components/page/statics/AboutGame.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/statics/AboutGame.html
@@ -23,13 +23,30 @@
 
             <p>
                 Hra se bude odehrávat o víkendu 16 – 18. května 2014 ve vojenském areálu Bratronice, okres Kladno.
-                Hráčský poplatek se bude pohybovat do 500 Kč (při platbě předem) a bude upřesněn před začátkem
-                registrace.
+                Hráčský poplatek bude při platbě předem na účet 450Kč, v případě platby na místě bude ve výši 650Kč.
+                Je možné objednat si k zapůjčení námi připravenou nerf zbraň Nerf N-strike Elite - Strongarm za 200Kč
+                V ceně zápůjčky je 12 střel, v případě zájmu o větší množství střel je možné se domluvit.
             </p>
+
+            <p>
+                V ceně standardního poplatku je: účast na akci, jídlo po dobu samotného larpu tj. celá sobota, voda,
+                odznáček účastníka.
+            </p>
+
+            <p>
+                Poplatek zaplaťte prosím předem do konce dubna na účet 2800141302/2010, variabilní symbol 201403,
+                do zprávy pro příjemce napište své celé jméno. Účet je transparentní, můžete se podívat zda
+                peníze přišli na adrese: <a href="https://www.fio.cz/scgi-bin/hermes/dz-transparent.cgi?ID_ucet=2800141302">
+                https://www.fio.cz/scgi-bin/hermes/dz-transparent.cgi?ID_ucet=2800141302
+                </a>
+            </p>
+
+            <p>V případě dalších dotazů se na nás můžete obrátit na adrese: nakaza@pilirionos.org</p>
 
             <h2>Místo</h2>
 
-            <iframe src="http://api4.mapy.cz/frame?url=http%3A%2F%2Fwww.mapy.cz%2Fs%2F9gh3&amp;z=14&amp;x=14.012789344251884&amp;y=50.05850178964737&amp;o=0&amp;layer=15&amp;dx=14.012254184964744&amp;dy=50.058731085708196&amp;dt=Bratronice%2C%20okres%20Kladno&amp;move=1&amp;prev=1&amp;w=700&amp;h=466" width="700" height="466" style="border:none" frameBorder="0"></iframe>
+            <iframe src="http://api4.mapy.cz/frame?url=http%3A%2F%2Fwww.mapy.cz%2Fs%2F9gh3&amp;z=14&amp;x=14.012789344251884&amp;y=50.05850178964737&amp;o=0&amp;layer=15&amp;dx=14.012254184964744&amp;dy=50.058731085708196&amp;dt=Bratronice%2C%20okres%20Kladno&amp;move=1&amp;prev=1&amp;w=700&amp;h=466"
+                    width="700" height="466" style="border:none" frameBorder="0"></iframe>
 
             <p>Nejbližší autobusovou zastávkou je Bratronice, obecní úřad.</p>
 
@@ -47,18 +64,26 @@
                 Každý hráč se musí povinně zaregistrovat, než mu bude umožněno vytvořit si vlastní postavu.
                 Při tvorbě postavy musíte uvést několik základních informací plus stručný popis své postavy a následně
                 se již můžete vesele zapojit do nějakého příběhu či vytvořit nový v sekci „Příběhy“.
-
-
             </p>
 
             <h2>Boj:</h2>
 
             <p>
-                Ve hře bude probíhat boj podle pravidel tzv. „šatrhu“, kdy každý hraje své zranění. Po zásahu do ruky ji
-                nemůžete použít, při zásahu do nohy se většinou na zraněnou nohu nedokážete pořádně postavit a po zásahu
-                do těla si musí zraněné místo pořádně držet rukou. Jakýkoliv zásah, ať již zbraní na blízko nebo na
-                dálku, způsobuje stejně vážná zranění. Každý hráč vydrží maximálně tři zásahy do těla nebo jeden do
-                hlavy a následně upadá do agónie. Není-li ošetřen medikem, za 20 minut umírá.
+                Ve hře bude probíhat boj podle pravidel tzv. „šatrhu“, kdy každý hraje své zranění. Hráč se dělí na
+                hlavu (včetně krku) a tělo (včetně končetin). Po zásahu do ruky ji nemůžete použít, při zásahu do nohy
+                se většinou na zraněnou nohu nedokážete pořádně postavit a po zásahu do těla si musí zraněné místo
+                pořádně držet rukou. Jakýkoliv zásah, ať již zbraní na blízko nebo na dálku, způsobuje stejně vážná
+                zranění. Každý hráč vydrží maximálně tři zásahy do těla nebo jeden do hlavy a následně upadá do agónie.
+                Není-li ošetřen medikem, za 20 minut umírá.
+            </p>
+
+            <h3>Speciální schopnost:</h3>
+
+            <p>
+                <b>Ochromení:</b> Jedná se o speciální efekt, doprovázející případný útok některých nebezpečnějších
+                zombie. Je způsoben jedem, který mají tito zombie na pařátech. Po zásahu způsobí kromě běžného zranění i
+                ochromení zasažené části těla na 10 minut. Při zásahu tento efekt ohlašuje útočník slovem „ochromení“ a
+                zasažený musí zahrát negativní efekt.
             </p>
 
             <h2>Zbraně:</h2>
@@ -108,8 +133,9 @@
             </p>
 
             <p>
-                Na herním území je k dispozici také jídlo, které může šťastný nájemce prohlásit za své a následně
-                využít. Takto využitelné jídlo bude označené.
+                Na herním území je k dispozici také jídlo, které může šťastný nálezce prohlásit za své a následně
+                využít. Takto využitelné jídlo bude označené. Během herní doby lze používat pouze herní jídlo s
+                pochopitelnými výjimkami pro diabetiky a podobně.
             </p>
 
             <h3>
@@ -130,11 +156,12 @@
 
             <p>
                 V případě, že je nějaký člověk zabit, aniž ho předtím pokouše zombie, vlivem slabšího viru z ovzduší se
-                z něho po deseti minutách stane zombie. Nastane-li situace, že je hráč zombie pouze pokousán, ale útok
-                přežije, vir začne jeho tělo postupně měnit. Nejprve se objeví zvýšená teplota a malátnost. Po uplynutí
-                cca dvou hodin mu začne blednout kůže a získávat nazelenalý nádech, následující dvě hodiny zvrací krev a
-                svíjí se v křeči. Pokud po tuto dobu postavu nikdo nezabije, tak na následující tři hodiny upadá do
-                komatu po nichž se již zvedá jako zombie. Po upadnutí do komatu vyhledejte organizátora.
+                z něho po deseti minutách stane zombie. Vzdušný vir ovlivňuje pouze mrtvá těla, imunitní systém živého
+                člověka se s ním vypořádá. Nastane-li situace, že je hráč zombie pouze pokousán, ale útok přežije, vir
+                začne jeho tělo postupně měnit. Nejprve se objeví zvýšená teplota a malátnost. Po uplynutí cca dvou
+                hodin mu začne blednout kůže a získávat nazelenalý nádech, následující dvě hodiny zvrací krev a svíjí se
+                v křeči. Pokud po tuto dobu postavu nikdo nezabije, tak na následující tři hodiny upadá do komatu po
+                nichž se již zvedá jako zombie. Po upadnutí do komatu vyhledejte organizátora.
             </p>
 
             <p>
