--- a/src/main/java/org/pilirion/nakaza/components/page/statics/AboutWorld.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/statics/AboutWorld.html
@@ -33,11 +33,40 @@
                 najít si bezpečný úkryt...
             </p>
 
+            <h2>Herní místo</h2>
+
+            <p>
+                Karanténní oblast označená jako PXE01 je zároveň považována za prvotní místo expanze nákazy mezi běžnou
+                populaci. Jedná se o okrajovou oblast Elefantry, dříve využívanou výhradně k průmyslovým účelům. V
+                dnešní době již většina korporací své pozemky v této oblasti opustila a díky tomu se staly úkrytem
+                spodiny města a dalších pochybných existencí. Mezi nimi se pravděpodobně ukryly i uprchlé testovací
+                subjekty společnosti Odagra. Bez prakticky žádných hygienických norem a bez možnosti včasného poskytnutí
+                léků se nákaza rychle rozšířila mezi místní populaci a následně i do dalších oblastí. Následná
+                karanténní opatření již nedokázala zastavit rychle narůstající počty nakažených po celém městě.
+            </p>
+
+            <p>
+                Dne 24.dubna 2030 předala vláda města veškerou správu a pravomoci do rukou korporace Odagra, která
+                okamžitě téhož dne vyhlásila karanténu a stanné právo na území celé Elefantry. Na ulicích se objevila
+                vozidla i vojáci nesoucí označení korporace Odagra, kteří likvidovali jakoukoliv i nepatrnou známku
+                působení viru.
+            </p>
+
+            <p>
+                Tento postup bohužel na několik místech neprobíhal rychlostí dle stanoveného plánu. Mezi těmito místy
+                byla i již výše zmíněná oblast označená jako PXE01, kde původně vyslané vojenské složky byly zničeny
+                velkým množstvím jedinců postižených působením nákazy. Vedení korporace Odagra rozhodlo o opětovném
+                získání ztracený kontroly a všech laboratorních prostor. Tím vznikla pro všechny přeživší velká šance na
+                brzkou záchranu a evakuaci do bezpečných táborů vytvořených pro přemístění populace ze zasažených
+                oblastí mimo ohniska nákazy. Nad celé město korporace Odagra vyslala své vrtulníky vysílající nové
+                informace slibující brzkou záchranu...
+            </p>
+
             <h2>Veřejný popis skupin</h2>
 
             <h3>Přeživší</h3>
 
-            <img class="float-left" wicket:id="survivor" />
+            <img class="float-left" wicket:id="survivor"/>
 
             <p>Po začátku šíření nákazy rozhodla korporace Odagra o zřízení karanténních oblastí. Nenakaženým obyvatelům
                 bylo nakázáno, aby si vytvořili zásoby a neopouštěli bezpečí svých domovů. Většina předpokládala, že se
@@ -55,7 +84,7 @@
 
             <h3>Zombie</h3>
 
-            <img class="float-right" wicket:id="zombie" />
+            <img class="float-right" wicket:id="zombie"/>
 
             <p>
                 Následuje vyjádření doktora Entona pro rozpoznání průběhu nákazy u postižených osob.
@@ -83,7 +112,7 @@
                 ovládat střelné zbraně.
             </p>
 
-            <img class="float-left" wicket:id="army" />
+            <img class="float-left" wicket:id="army"/>
 
             <h3>Armáda</h3>
 
