--- a/src/main/java/org/pilirion/nakaza/components/panel/layout/NewsPanel.html
+++ b/src/main/java/org/pilirion/nakaza/components/panel/layout/NewsPanel.html
@@ -8,4 +8,10 @@
     <div class="right-menu-section"><span class="date">06-12-2013</span>
         <br>Aktualizace sekce O hře
     </div>
+    <div class="right-menu-section"><span class="date">16-02-2014</span>
+        <br>Oficiální spuštění stránek
+    </div>
+    <div class="right-menu-section"><span class="date">02-03-2014</span>
+        <br>Začátek registrace
+    </div>
 </wicket:panel>
