Minor improvements for admins. Added texts

--- a/src/main/java/org/pilirion/nakaza/components/page/character/CharacterDetail.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/character/CharacterDetail.html
@@ -3,8 +3,10 @@
         <div class="left-menu" wicket:id="leftMenus">
 
         </div>
-        <div class="middle-cotent" wicket:id="character-detail">
-
+        <div class="middle-cotent">
+            <div wicket:id="character-detail"></div>
+            <div wicket:id="zombieRules"></div>
+            <div wicket:id="armyRules"></div>
         </div>
     </div>
     <div class="w-col w-col-2 right-info">
