--- a/src/main/java/org/pilirion/nakaza/components/page/statics/AboutWorld.html
+++ b/src/main/java/org/pilirion/nakaza/components/page/statics/AboutWorld.html
@@ -62,6 +62,8 @@
                 informace slibující brzkou záchranu...
             </p>
 
+            <a href="http://www.mapy.cz/s/9oeY">Význačné body v území.</a>
+
             <h2>Veřejný popis skupin</h2>
 
             <h3>Přeživší</h3>
@@ -132,6 +134,7 @@
                 jiné méně zajímavé úkony, jako bezpečné dopravení zásob munice či výslechy zatčených. Jejich zbraně
                 nejčastěji tvoří výhradně střelné zbraně občas doplněné o nějaký nůž či mačetu.
             </p>
+
         </div>
     </div>
     <div class="w-col w-col-2 right-info">
