--- a/src/main/java/org/pilirion/nakaza/components/panel/layout/NewsPanel.html
+++ b/src/main/java/org/pilirion/nakaza/components/panel/layout/NewsPanel.html
@@ -14,4 +14,7 @@
     <div class="right-menu-section"><span class="date">02-03-2014</span>
         <br>Začátek registrace
     </div>
+    <div class="right-menu-section"><span class="date">09-03-2014</span>
+        <br>Doplněny význačné body na území
+    </div>
 </wicket:panel>
