--- a/src/main/java/org/pilirion/nakaza/components/panel/participant/ParticipantDetail.html
+++ b/src/main/java/org/pilirion/nakaza/components/panel/participant/ParticipantDetail.html
@@ -3,6 +3,9 @@
         <div class="name" wicket:id="name"></div>
         <div class="description" wicket:id="descriptionPublic"></div>
         <div class="group"><span style="text-decoration: underline;">Skupina</span>: <span wicket:id="group">Přeživší</span></div>
+        <div class="person">
+            <a wicket:id="personDetail"></a>
+        </div>
         <div class="private description" wicket:id="descriptionPrivate">
             <!-- Shown only if I am participant and furthermore this specific one. -->
         </div>
